--- a/src/style.css
+++ b/src/style.css
@@ -266,6 +266,10 @@ body {
   body {
     font-size: 14px;
   }
+
+  .gloove-social-networks {
+    display: none;
+  }
 }
 
 p {
@@ -648,25 +652,13 @@ a:visited {
   }
 }
 
-.section-heading .dash-style {
-  padding-left: 80px;
-  position: relative;
-}
+
 
 .section-heading #behappy-text {
   font-size: 32px !important;
 }
 
-.section-heading .dash-style:before {
-  background-color: #156B7A;
-  content: "";
-  height: 2px;
-  width: 70px;
-  margin-right: 10px;
-  position: absolute;
-  left: 0;
-  top: 50%;
-}
+
 
 .title-icon-divider {
   color: #0791BE;
@@ -1514,6 +1506,7 @@ input[type=submit]:focus {
 ----------------------------------------------------------------*/
 .site-header {
   position: relative;
+  z-index: 9999;
 }
 
 .site-header .black-logo {
@@ -1526,7 +1519,7 @@ input[type=submit]:focus {
   position: absolute;
   width: 100%;
   top: 0;
-  z-index: 99;
+  z-index: 9999;
 }
 
 /*--- top header css start ---*/
@@ -2125,6 +2118,22 @@ input[type=submit]:focus {
 
   .fixed-header .bottom-header .black-logo {
     display: block;
+  }
+
+  .section-heading .dash-style:before {
+    background-color: #156B7A;
+    content: "";
+    height: 2px;
+    width: 70px;
+    margin-right: 10px;
+    position: absolute;
+    left: 0;
+    top: 50%;
+  }
+
+  .section-heading .dash-style {
+    padding-left: 80px;
+    position: relative;
   }
 }
 
@@ -2792,6 +2801,10 @@ input[type=submit]:focus {
   .shape-search-section .trip-search-inner {
     margin-top: -210px;
   }
+  .gloove-social-networks {
+    display: flex;
+  }
+  
 }
 
 @media only screen and (min-width: 915px) {
@@ -3885,7 +3898,7 @@ input[type=submit]:focus {
 >>> Home travel activity section  
 ----------------------------------------------------------------*/
 .activity-section {
-  width: 1300px;
+  width: 100%;
   max-width: 1300px;
   margin: 0 auto;
   padding-bottom: 100px;
@@ -8208,9 +8221,17 @@ procduct details css
   color: #2C75BA;
 }
 
+#link-redes-sociales {
+  flex-direction: row;
+}
+
 @media screen and (min-width: 992px) {
   .product-summary {
     margin-left: 20px;
+  }
+
+  #footer-redes-sociales {
+    flex-direction: column;
   }
 }
 
@@ -10157,9 +10178,7 @@ product checkout css
 }
 /*# sourceMappingURL=style.css.map */
 
-.react-multiple-carousel__arrow {
-  margin-right: 50px;
-}
+
 
 .react-multi-carousel-dot--active button {
   border: 0px;
@@ -10215,4 +10234,10 @@ product checkout css
   .carousel-slide img {
     transform: scale(1.2); /* Escalado en pantallas medianas y grandes */
   }
+
+  .react-multiple-carousel__arrow {
+    margin-right: 50px;
+  }
+
+  
 }
